{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 196,
  "lineage": "9d6a82fc-e242-bd56-3e25-def36465e8fa",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-instance",
      "provider": "module.ec2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa787af8cdd260f1",
            "arn": "arn:aws:ec2:ap-southeast-1:294069028655:instance/i-0c80b75467da82da8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c80b75467da82da8",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "kanak",
            "monitoring": false,
            "primary_network_interface_id": "eni-01a80adc2ed5c42ba",
            "private_dns": "ip-10-0-41-168.ap-southeast-1.compute.internal",
            "private_ip": "10.0.41.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-025319af9c25ff1e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e6804351d29a798",
            "tags": {
              "Name": "HU2020-kanak-private-tf"
            },
            "tenancy": "dedicated",
            "vpc_security_group_ids": [
              "sg-0761af20899906530"
            ]
          },
          "dependencies": [
            "module.ec2.module.vpc_main.aws_security_group.ssh-allowed",
            "module.ec2.module.vpc_main.aws_subnet.private-subnet",
            "module.ec2.module.vpc_main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instance",
      "provider": "module.ec2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa787af8cdd260f1",
            "arn": "arn:aws:ec2:ap-southeast-1:294069028655:instance/i-01406dace37aaed16",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01406dace37aaed16",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "kanak",
            "monitoring": false,
            "primary_network_interface_id": "eni-02b71c12a0801d0e6",
            "private_dns": "ip-10-0-42-134.ap-southeast-1.compute.internal",
            "private_ip": "10.0.42.134",
            "public_dns": "ec2-18-136-194-174.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.194.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05506c2b64a9427b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b94ed240c57fd456",
            "tags": {
              "Name": "HU2020-kanak-public-tf"
            },
            "tenancy": "dedicated",
            "vpc_security_group_ids": [
              "sg-0761af20899906530"
            ]
          },
          "dependencies": [
            "module.ec2.module.vpc_main.aws_security_group.ssh-allowed",
            "module.ec2.module.vpc_main.aws_subnet.public-subnet",
            "module.ec2.module.vpc_main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc_main",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.ec2.module.vpc_main.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03a612260044e1192",
            "owner_id": "294069028655",
            "tags": {
              "Name": "HU2020-kanak-igw"
            },
            "vpc_id": "vpc-0d68f1363f8f15f36"
          },
          "dependencies": [
            "module.ec2.module.vpc_main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route1",
      "provider": "module.ec2.module.vpc_main.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-096171414c3e4e167",
            "owner_id": "294069028655",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HU2020-kanak-private"
            },
            "vpc_id": "vpc-0d68f1363f8f15f36"
          },
          "dependencies": [
            "module.ec2.module.vpc_main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route1",
      "provider": "module.ec2.module.vpc_main.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-075fb737e4210b809",
            "owner_id": "294069028655",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a612260044e1192",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "HU2020-kanak-public"
            },
            "vpc_id": "vpc-0d68f1363f8f15f36"
          },
          "dependencies": [
            "module.ec2.module.vpc_main.aws_internet_gateway.igw",
            "module.ec2.module.vpc_main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "HU2020-kanak-private-subnet",
      "provider": "module.ec2.module.vpc_main.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025c848872ba6805a",
            "route_table_id": "rtb-096171414c3e4e167",
            "subnet_id": "subnet-07e6804351d29a798"
          },
          "dependencies": [
            "module.ec2.module.vpc_main.aws_route_table.private-route1",
            "module.ec2.module.vpc_main.aws_subnet.private-subnet",
            "module.ec2.module.vpc_main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "HU2020-kanak-public-subnet",
      "provider": "module.ec2.module.vpc_main.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045000d2ad7388521",
            "route_table_id": "rtb-075fb737e4210b809",
            "subnet_id": "subnet-0b94ed240c57fd456"
          },
          "dependencies": [
            "module.ec2.module.vpc_main.aws_internet_gateway.igw",
            "module.ec2.module.vpc_main.aws_route_table.public-route1",
            "module.ec2.module.vpc_main.aws_subnet.public-subnet",
            "module.ec2.module.vpc_main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc_main",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "module.ec2.module.vpc_main.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:294069028655:security-group/sg-0761af20899906530",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0761af20899906530",
            "ingress": [
              {
                "cidr_blocks": [
                  "125.99.249.250/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "125.99.249.250/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200225063659333400000001",
            "name_prefix": null,
            "owner_id": "294069028655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HU2020-kanak-ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d68f1363f8f15f36"
          },
          "dependencies": [
            "module.ec2.module.vpc_main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc_main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "module.ec2.module.vpc_main.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:294069028655:subnet/subnet-07e6804351d29a798",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.41.0/24",
            "id": "subnet-07e6804351d29a798",
            "map_public_ip_on_launch": false,
            "owner_id": "294069028655",
            "tags": {
              "Name": "HU2020-kanak-private"
            },
            "vpc_id": "vpc-0d68f1363f8f15f36"
          },
          "dependencies": [
            "module.ec2.module.vpc_main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc_main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "module.ec2.module.vpc_main.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:294069028655:subnet/subnet-0b94ed240c57fd456",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.42.0/24",
            "id": "subnet-0b94ed240c57fd456",
            "map_public_ip_on_launch": true,
            "owner_id": "294069028655",
            "tags": {
              "Name": "HU2020-kanak-public"
            },
            "vpc_id": "vpc-0d68f1363f8f15f36"
          },
          "dependencies": [
            "module.ec2.module.vpc_main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc_main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.ec2.module.vpc_main.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:294069028655:vpc/vpc-0d68f1363f8f15f36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff4ccd94aa287f5e",
            "default_route_table_id": "rtb-0fb67f2ce17f72add",
            "default_security_group_id": "sg-0714bb8803cc2fbbd",
            "dhcp_options_id": "dopt-722df115",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d68f1363f8f15f36",
            "instance_tenancy": "dedicated",
            "main_route_table_id": "rtb-0fb67f2ce17f72add",
            "owner_id": "294069028655",
            "tags": {
              "Name": "kanak-hu2020-vpc"
            }
          }
        }
      ]
    }
  ]
}